feat: improving add to cart retry on search products

--- a/react/styles.css
+++ b/react/styles.css
@@ -26,6 +26,12 @@
   flex-wrap: wrap;
 }
 
+.container
+  .table
+  :global(.flex.items-center.w-100.h-100.ph4.bb.b--muted-4.truncate) {
+  cursor: auto;
+}
+
 .container :global(.vtex-dropdown__help-text) {
   margin-top: var(--small-gap);
 }
