--- a/react/styles.css
+++ b/react/styles.css
@@ -34,6 +34,7 @@
 
 .container :global(.vtex-dropdown__help-text) {
   margin-top: var(--small-gap);
+  text-align: center;
 }
 
 .container :local([data-testid='totalizer-value']),
@@ -73,7 +74,7 @@
 .container .shippingEstimates {
   padding: 0;
   list-style-position: inside;
-  margin: 0 0 0 calc(var(--base-font-size) / 2);
+  margin: 0;
 }
 
 .container :global(.vtex-input-prefix__group),
@@ -95,4 +96,11 @@
 
 .containerToggle > :local(div) {
   flex: auto;
+}
+
+.container .itemContent {
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
