fix: improving layout shifts; disable and multiply quantity on kit components

--- a/react/styles.css
+++ b/react/styles.css
@@ -107,3 +107,7 @@
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+
+.container :global(.vtex-checkbox__line-container) {
+  align-items: center;
+}
