--- a/react/styles.css
+++ b/react/styles.css
@@ -70,9 +70,16 @@
 }
 
 .container .shippingEstimates {
+  gap: 1rem;
   padding: 0;
   list-style: none;
   margin: 0;
+}
+
+.container .shippingEstimates > :local(*) {
+  width: calc((100% - 1rem) / 2);
+  min-width: 70px;
+  flex: 1;
 }
 
 .container :global(.vtex-input-prefix__group),
