--- a/react/styles.css
+++ b/react/styles.css
@@ -129,3 +129,27 @@
 .container :global(.vtex-checkbox__line-container) {
   align-items: center;
 }
+
+.promotionsContainer {
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.promotionCard {
+  max-width: 200px;
+}
+
+.promotionCard :global(.vtex-card) {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.promotionCard .promotionDescriptionContainer {
+  gap: 0.75rem;
+}
+
+.promotionCard :global(.vtex-styleguide-9-x-progressHeight) {
+  transition: width ease 0.5s;
+}
