feat: show only product row in the search if it has only one SKU

--- a/react/styles.css
+++ b/react/styles.css
@@ -130,6 +130,10 @@
   align-items: center;
 }
 
+.container :global(.vtex-styleguide-9-x-scroll) {
+  z-index: 9999;
+}
+
 .promotionsContainer {
   gap: 16px;
   padding: 10px;
